bug 609909 - crashes in nsNNTPProtocol during connection closure r=bienvenu